// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Course Settings, student access can switch to links 1`] = `
.c0 {
  margin-right: 0.5rem;
  margin-left: 0.5rem;
}

<div
  className="student-access"
>
  <p>
    Choose how students access OpenStax Tutor. Access settings cannot be changed after students begin to enroll.
  </p>
  <a
    href="https://openstax.secure.force.com/help/articles/FAQ/Student-Access-with-Enrollment-Link-versus-LMS-sign-in-for-OpenStax-Tutor-Beta-LMS-Pilots"
    target="_blank"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-info-circle fa-w-16 c0 ox-icon ox-icon-info-circle"
      data-icon="info-circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
     Which option is right for my course?
  </a>
  <div>
    <div
      className="links active card"
    >
      <div
        className="card-header"
      >
        <div
          aria-selected={true}
          className="links choice checked"
          onClick={[Function]}
          role="button"
        >
          <div
            className="heading"
          >
            <h3
              className="title"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-check-square fa-w-14 c0 ox-icon ox-icon-check-square"
                color="#63a524"
                data-icon="check-square"
                data-prefix="far"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M400 32H48C21.49 32 0 53.49 0 80v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V80c0-26.51-21.49-48-48-48zm0 400H48V80h352v352zm-35.864-241.724L191.547 361.48c-4.705 4.667-12.303 4.637-16.97-.068l-90.781-91.516c-4.667-4.705-4.637-12.303.069-16.971l22.719-22.536c4.705-4.667 12.303-4.637 16.97.069l59.792 60.277 141.352-140.216c4.705-4.667 12.303-4.637 16.97.068l22.536 22.718c4.667 4.706 4.637 12.304-.068 16.971z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
              Give students direct links
            </h3>
            <p
              className="info"
            >
              You will give students links to access OpenStax Tutor directly.
            </p>
          </div>
        </div>
      </div>
      <div
        className="card-body"
      >
        <p>
          Send your students their section's direct links to enroll.
        </p>
        <label
          className="copy-on-focus"
        >
          1st
          <input
            className={null}
            onFocus={[Function]}
            readOnly={true}
            value="http://test/period/1/Local-Test-Course-Two-Spring-2017"
          />
        </label>
      </div>
    </div>
    <div
      className="lms card"
    >
      <div
        className="card-header"
      >
        <div
          aria-selected={false}
          className="lms choice"
          onClick={[Function]}
          role="button"
        >
          <div
            className="heading"
          >
            <h3
              className="title"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-square fa-w-14 c0 ox-icon ox-icon-square"
                color="#929292"
                data-icon="square"
                data-prefix="far"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-6 400H54c-3.3 0-6-2.7-6-6V86c0-3.3 2.7-6 6-6h340c3.3 0 6 2.7 6 6v340c0 3.3-2.7 6-6 6z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
              Integrate with your learning management system (LMS)
            </h3>
            <p
              className="info"
            >
              Integrate OpenStax Tutor with Blackboard, Canvas, etc., to send student course averages to your LMS and enable single sign on.
            </p>
          </div>
        </div>
      </div>
      <div
        className="card-body"
      />
    </div>
  </div>
</div>
`;

exports[`Course Settings, student access can switch to lms 1`] = `
.c0 {
  margin-right: 0.5rem;
  margin-left: 0.5rem;
}

<div
  className="student-access"
>
  <p>
    Choose how students access OpenStax Tutor. Access settings cannot be changed after students begin to enroll.
  </p>
  <a
    href="https://openstax.secure.force.com/help/articles/FAQ/Student-Access-with-Enrollment-Link-versus-LMS-sign-in-for-OpenStax-Tutor-Beta-LMS-Pilots"
    target="_blank"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-info-circle fa-w-16 c0 ox-icon ox-icon-info-circle"
      data-icon="info-circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
     Which option is right for my course?
  </a>
  <div>
    <div
      className="links card"
    >
      <div
        className="card-header"
      >
        <div
          aria-selected={false}
          className="links choice"
          onClick={[Function]}
          role="button"
        >
          <div
            className="heading"
          >
            <h3
              className="title"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-square fa-w-14 c0 ox-icon ox-icon-square"
                color="#929292"
                data-icon="square"
                data-prefix="far"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-6 400H54c-3.3 0-6-2.7-6-6V86c0-3.3 2.7-6 6-6h340c3.3 0 6 2.7 6 6v340c0 3.3-2.7 6-6 6z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
              Give students direct links
            </h3>
            <p
              className="info"
            >
              You will give students links to access OpenStax Tutor directly.
            </p>
          </div>
        </div>
      </div>
      <div
        className="card-body"
      >
        <p>
          Send your students their section's direct links to enroll.
        </p>
        <label
          className="copy-on-focus"
        >
          1st
          <input
            className={null}
            onFocus={[Function]}
            readOnly={true}
            value="http://test/period/1/Local-Test-Course-Two-Spring-2017"
          />
        </label>
      </div>
    </div>
    <div
      className="lms active card"
    >
      <div
        className="card-header"
      >
        <div
          aria-selected={true}
          className="lms choice checked"
          onClick={[Function]}
          role="button"
        >
          <div
            className="heading"
          >
            <h3
              className="title"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-check-square fa-w-14 c0 ox-icon ox-icon-check-square"
                color="#63a524"
                data-icon="check-square"
                data-prefix="far"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M400 32H48C21.49 32 0 53.49 0 80v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V80c0-26.51-21.49-48-48-48zm0 400H48V80h352v352zm-35.864-241.724L191.547 361.48c-4.705 4.667-12.303 4.637-16.97-.068l-90.781-91.516c-4.667-4.705-4.637-12.303.069-16.971l22.719-22.536c4.705-4.667 12.303-4.637 16.97.069l59.792 60.277 141.352-140.216c4.705-4.667 12.303-4.637 16.97.068l22.536 22.718c4.667 4.706 4.637 12.304-.068 16.971z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
              Integrate with your learning management system (LMS)
            </h3>
            <p
              className="info"
            >
              Integrate OpenStax Tutor with Blackboard, Canvas, etc., to send student course averages to your LMS and enable single sign on.
            </p>
          </div>
        </div>
      </div>
      <div
        className="card-body"
      >
        <div
          className="lms-access"
        >
          <div
            className="btn-group btn-group-small btn-group-toggle"
            role="group"
          >
            <label
              className="btn active btn-default"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={true}
                disabled={false}
                name="vendor"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value="blackboard"
              />
              Blackboard
            </label>
            <label
              className="btn btn-default"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={false}
                disabled={false}
                name="vendor"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value="canvas"
              />
              Canvas
            </label>
            <label
              className="btn btn-default"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={false}
                disabled={false}
                name="vendor"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value="moodle"
              />
              Moodle
            </label>
            <label
              className="btn btn-default"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={false}
                disabled={false}
                name="vendor"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value="d2l"
              />
              Desire2Learn
            </label>
            <label
              className="btn btn-default"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={false}
                disabled={false}
                name="vendor"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value="sakai"
              />
              Sakai
            </label>
          </div>
          <p>
            Copy the information below and paste into your LMS where prompted. Then launch OpenStax Tutor from your LMS to pair.
          </p>
          <div
            className="blackboard"
          >
            <a
              className="external-icon"
              href="https://openstax.secure.force.com/help/articles/FAQ/Blackboard-LMS-integration-for-OpenStax-Tutor-Beta"
              tabIndex={0}
              target="_blank"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-info-circle fa-w-16 c0 ox-icon ox-icon-info-circle"
                data-icon="info-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
               How do I integrate with Blackboard?
            </a>
            <label
              className="copy-on-focus"
            >
              URL
              <input
                className={null}
                onFocus={[Function]}
                readOnly={true}
                value=""
              />
            </label>
            <label
              className="copy-on-focus"
            >
              Key
              <input
                className={null}
                onFocus={[Function]}
                readOnly={true}
                value="key-123"
              />
            </label>
            <label
              className="copy-on-focus"
            >
              Secret
              <input
                className={null}
                onFocus={[Function]}
                readOnly={true}
                value="secret-sshhh"
              />
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Course Settings, student access renders chooser when lms is enabled 1`] = `
.c0 {
  margin-right: 0.5rem;
  margin-left: 0.5rem;
}

<div
  className="student-access"
>
  <p>
    Choose how students access OpenStax Tutor. Access settings cannot be changed after students begin to enroll.
  </p>
  <a
    href="https://openstax.secure.force.com/help/articles/FAQ/Student-Access-with-Enrollment-Link-versus-LMS-sign-in-for-OpenStax-Tutor-Beta-LMS-Pilots"
    target="_blank"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-info-circle fa-w-16 c0 ox-icon ox-icon-info-circle"
      data-icon="info-circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
     Which option is right for my course?
  </a>
  <div>
    <div
      className="links active card"
    >
      <div
        className="card-header"
      >
        <div
          aria-selected={true}
          className="links choice checked"
          onClick={[Function]}
          role="button"
        >
          <div
            className="heading"
          >
            <h3
              className="title"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-check-square fa-w-14 c0 ox-icon ox-icon-check-square"
                color="#63a524"
                data-icon="check-square"
                data-prefix="far"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M400 32H48C21.49 32 0 53.49 0 80v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V80c0-26.51-21.49-48-48-48zm0 400H48V80h352v352zm-35.864-241.724L191.547 361.48c-4.705 4.667-12.303 4.637-16.97-.068l-90.781-91.516c-4.667-4.705-4.637-12.303.069-16.971l22.719-22.536c4.705-4.667 12.303-4.637 16.97.069l59.792 60.277 141.352-140.216c4.705-4.667 12.303-4.637 16.97.068l22.536 22.718c4.667 4.706 4.637 12.304-.068 16.971z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
              Give students direct links
            </h3>
            <p
              className="info"
            >
              You will give students links to access OpenStax Tutor directly.
            </p>
          </div>
        </div>
      </div>
      <div
        className="card-body"
      >
        <p>
          Send your students their section's direct links to enroll.
        </p>
        <label
          className="copy-on-focus"
        >
          1st
          <input
            className={null}
            onFocus={[Function]}
            readOnly={true}
            value="http://test/period/1/Local-Test-Course-Two-Spring-2017"
          />
        </label>
      </div>
    </div>
    <div
      className="lms card"
    >
      <div
        className="card-header"
      >
        <div
          aria-selected={false}
          className="lms choice"
          onClick={[Function]}
          role="button"
        >
          <div
            className="heading"
          >
            <h3
              className="title"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-square fa-w-14 c0 ox-icon ox-icon-square"
                color="#929292"
                data-icon="square"
                data-prefix="far"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-6 400H54c-3.3 0-6-2.7-6-6V86c0-3.3 2.7-6 6-6h340c3.3 0 6 2.7 6 6v340c0 3.3-2.7 6-6 6z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
              Integrate with your learning management system (LMS)
            </h3>
            <p
              className="info"
            >
              Integrate OpenStax Tutor with Blackboard, Canvas, etc., to send student course averages to your LMS and enable single sign on.
            </p>
          </div>
        </div>
      </div>
      <div
        className="card-body"
      />
    </div>
  </div>
</div>
`;

exports[`Course Settings, student access renders with only link for non-lms enabled 1`] = `
<div
  className="student-access"
>
  <div
    className="student-access direct-links-only"
  >
    <p>
      Interested in learning management system (LMS) integration? 
      <a
        className="external-icon"
        href="https://openstax.secure.force.com/help/articles/FAQ/LMS-integration-for-OpenStax-Tutor-Beta"
        target="_blank"
      >
        Find out more.
      </a>
    </p>
    <p>
      If not, send your students their section’s direct links (below) to enroll.
    </p>
    <label
      className="copy-on-focus"
    >
      1st
      <input
        className={null}
        onFocus={[Function]}
        readOnly={true}
        value="http://test/period/1/Local-Test-Course-Two-Spring-2017"
      />
    </label>
  </div>
</div>
`;
